# nbdev-hello-world

./: 00_core.ipynb  README.md  _quarto.yml  core.html  index.html  index.ipynb  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
nbdev_hello_world/: _modidx.py  core.py
